WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162581
ASSERTION FAILED: result
https://bugs.webkit.org/show_bug.cgi?id=162581
Summary
ASSERTION FAILED: result
Ryan Haddad
Reported
2016-09-26 15:37:07 PDT
OpenSource/Source/WebCore/inspector/InspectorOverlay.cpp(927) : void WebCore::evaluateCommandInOverlay(WebCore::Page *, Ref<Inspector::InspectorArray> &&) 1 0x110ef9b30 WTFCrash 2 0x117019c6b WebCore::evaluateCommandInOverlay(WebCore::Page*, WTF::Ref<Inspector::InspectorArray>&&) 3 0x117019ad4 WebCore::InspectorOverlay::evaluateInOverlay(WTF::String const&, WTF::String const&) 4 0x117016d74 WebCore::InspectorOverlay::overlayPage() 5 0x11701723b WebCore::InspectorOverlay::update() 6 0x117017575 WebCore::InspectorOverlay::highlightNode(WebCore::Node*, WebCore::HighlightConfig const&) 7 0x116fb876a WebCore::InspectorDOMAgent::highlightNode(WTF::String&, Inspector::InspectorObject const&, int const*, WTF::String const*) 8 0x116fb8922 non-virtual thunk to WebCore::InspectorDOMAgent::highlightNode(WTF::String&, Inspector::InspectorObject const&, int const*, WTF::String const*) 9 0x1107a91d4 Inspector::DOMBackendDispatcher::highlightNode(long, WTF::RefPtr<Inspector::InspectorObject>&&) 10 0x1107a3bd6 Inspector::DOMBackendDispatcher::dispatch(long, WTF::String const&, WTF::Ref<Inspector::InspectorObject>&&) 11 0x11078fcf2 Inspector::BackendDispatcher::dispatch(WTF::String const&) 12 0x116f715cf WebCore::InspectorController::dispatchMessageFromFrontend(WTF::String const&) 13 0x116fdd812 WebCore::InspectorBackendDispatchTask::timerFired() 14 0x116fdf298 void std::__1::__invoke_void_return_wrapper<void>::__call<std::__1::__bind<void (WebCore::InspectorBackendDispatchTask::*&)(), WebCore::InspectorBackendDispatchTask*>&>(std::__1::__bind<void (WebCore::InspectorBackendDispatchTask::*&)(), WebCore::InspectorBackendDispatchTask*>&&&) 15 0x116fdf16c std::__1::__function::__func<std::__1::__bind<void (WebCore::InspectorBackendDispatchTask::*&)(), WebCore::InspectorBackendDispatchTask*>, std::__1::allocator<std::__1::__bind<void (WebCore::InspectorBackendDispatchTask::*&)(), WebCore::InspectorBackendDispatchTask*> >, void ()>::operator()() 16 0x116092faa std::__1::function<void ()>::operator()() const 17 0x116092ebc WebCore::Timer::fired() 18 0x11868e85a WebCore::ThreadTimers::sharedTimerFiredInternal() 19 0x11868faa1 WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0::operator()() const 20 0x11868fa6d void std::__1::__invoke_void_return_wrapper<void>::__call<WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0&>(WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0&&&) 21 0x11868fa0c std::__1::__function::__func<WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0, std::__1::allocator<WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0>, void ()>::operator()() 22 0x116092faa std::__1::function<void ()>::operator()() const 23 0x1179dc17f WebCore::MainThreadSharedTimer::fired() 24 0x1179dc579 WebCore::timerFired(__CFRunLoopTimer*, void*) 25 0x7fffa0eeeb94 __CFRUNLOOP_IS_CALLING_OUT_TO_A_TIMER_CALLBACK_FUNCTION__ 26 0x7fffa0eee823 __CFRunLoopDoTimer 27 0x7fffa0eee37a __CFRunLoopDoTimers 28 0x7fffa0ee5871 __CFRunLoopRun 29 0x7fffa0ee4ed8 CFRunLoopRunSpecific 30 0x10f8a15fc runTest(std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> > const&) 31 0x10f89fcdd runTestingServerLoop()
Attachments
Patch
(1.67 KB, patch)
2016-09-26 16:00 PDT
,
Ryan Haddad
no flags
Details
Formatted Diff
Diff
Patch
(1.79 KB, patch)
2016-09-26 16:36 PDT
,
Ryan Haddad
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2016-09-26 15:37:59 PDT
<
rdar://problem/28076564
>
Ryan Haddad
Comment 2
2016-09-26 16:00:23 PDT
Created
attachment 289883
[details]
Patch
Alexey Proskuryakov
Comment 3
2016-09-26 16:04:05 PDT
I'm concerned that we will be getting the same tests mysteriously fail instead of mysteriously crashing. Is the failure result not a sign of something having gone wrong?
Ryan Haddad
Comment 4
2016-09-26 16:12:04 PDT
This fails to build anyway (thanks EWS!). Will wait for Joe to comment.
Alexey Proskuryakov
Comment 5
2016-09-26 16:29:36 PDT
Yes, you should also remove the "JSC::JSValue result = " part. I talked to Joe in person, he still thinks that we should do this.
Ryan Haddad
Comment 6
2016-09-26 16:36:57 PDT
Created
attachment 289890
[details]
Patch Take two.
WebKit Commit Bot
Comment 7
2016-09-27 10:35:41 PDT
Comment on
attachment 289890
[details]
Patch Clearing flags on attachment: 289890 Committed
r206443
: <
http://trac.webkit.org/changeset/206443
>
WebKit Commit Bot
Comment 8
2016-09-27 10:35:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug