Remove an unneeded assert in InspectorOverlay.cpp https://bugs.webkit.org/show_bug.cgi?id=162581

Reviewed by Alexey Proskuryakov.

This assertion was added to catch unknown issues, but it is firing frequently enough on certain Inspector
tests that it is causing more harm than good.

* inspector/InspectorOverlay.cpp:
(WebCore::buildQuadObjectForCSSRegionContentClip):
(WebCore::evaluateCommandInOverlay):


Canonical link: https://commits.webkit.org/180559@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206443 268f45cc-cd09-0410-ab3c-d52691b4dbfc